--- a/SLBr/SLBr/Resources/License.html
+++ b/SLBr/SLBr/Resources/License.html
@@ -1,5 +1,5 @@
 ﻿<!--Copyright © 2022 SLT World. All rights reserved.
-Use of this source code is governed by a BSD-style license that can be found in the LICENSE file.-->
+Use of this source code is governed by a GNU license that can be found in the LICENSE file.-->
 
 <!DOCTYPE html>
 
@@ -11,7 +11,7 @@ Use of this source code is governed by a BSD-style license that can be found in 
     </head>
     <body>
         <pre>
-// SLBr. The new, clean and lightweight .NET Web browser.
+// SLBr. The new, clean, lightweight .NET Web browser.
 // Copyright (C) 2022 SLT World
 //
 // This program is free software: you can redistribute it and/or modify
