--- a/SLBr/SLBr/Resources/Urls.html
+++ b/SLBr/SLBr/Resources/Urls.html
@@ -1,5 +1,5 @@
 ﻿<!--Copyright © 2022 SLT World. All rights reserved.d
-Use of this source code is governed by a BSD-style license that can be found in the LICENSE file.-->
+Use of this source code is governed by a GNU license that can be found in the LICENSE file.-->
 
 <!DOCTYPE html>waa
 
@@ -19,6 +19,7 @@ Use of this source code is governed by a BSD-style license that can be found in 
         <li><a href="slbr://about/">slbr://about</a></li>
         <li><a href="slbr://version/">slbr://version</a></li>
         <li><a href="slbr://license/">slbr://license</a></li>
+        <li><a href="slbr://credits/">slbr://credits</a></li>
         <li><a href="slbr://whatsnew/">slbr://whatsnew</a></li><!--milestones-->
         <!--<li><a href="slbr://plans/">slbr://plans</a></li>
     <li><a href="slbr://dino/">slbr://dino</a></li>-->
