--- a/SLBr/SLBr/Resources/Credits.html
+++ b/SLBr/SLBr/Resources/Credits.html
@@ -130,13 +130,13 @@ Use of this source code is governed by a GNU license that can be found in the LI
 <body>
     <span class="page-title" style="float:left;">License</span>
     <div style="clear:both; overflow:auto;">
-    <div class="product">
-        <span class="title">SLBr</span>
-        <span class="homepage"><a target="_blank" href="https://github.com/SLT-World/SLBr/">homepage</a></span>
-        <input type="checkbox" hidden id="0" />
-        <label class="show" for="0" tabindex="0"></label>
-        <div class="licence">
-            <pre>SLBr. The new, clean, lightweight .NET Web browser.
+        <div class="product">
+            <span class="title">SLBr</span>
+            <span class="homepage"><a target="_blank" href="https://github.com/SLT-World/SLBr/">homepage</a></span>
+            <input type="checkbox" hidden id="0" />
+            <label class="show" for="0" tabindex="0"></label>
+            <div class="licence">
+                <pre>SLBr. The new, clean, lightweight .NET Web browser.
 Copyright (C) 2022 SLT World
 
 This program is free software: you can redistribute it and/or modify
@@ -148,11 +148,12 @@ This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 GNU General Public License for more details.</pre>
+            </div>
         </div>
     </div>
-    </div>
 
-    <span class="page-title" style="float:left;">Credits</span>
+    <span class="page-title" style="float:left;">Third party software and libraries used in the development of SLBr:</span>
+    <!--<span class="page-title" style="float:left;">Credits</span>-->
     <div style="clear:both; overflow:auto;">
         <!-- SLBr appreciates the listed projects -->
         <div class="product">
@@ -189,8 +190,8 @@ SOFTWARE.</pre>
         <div class="product">
             <span class="title">Windows Presentation Foundation</span>
             <span class="homepage"><a target="_blank" href="https://docs.microsoft.com/en-us/visualstudio/designers/getting-started-with-wpf/">homepage</a></span>
-            <input type="checkbox" hidden id="1" />
-            <label class="show" for="1" tabindex="0"></label>
+            <input type="checkbox" hidden id="2" />
+            <label class="show" for="2" tabindex="0"></label>
             <div class="licence">
 <pre>The MIT License (MIT)
 
@@ -217,7 +218,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.</pre>
             </div>
         </div>
-        <div class="product">
+        <!--<div class="product">
             <span class="title">The Chromium Project</span>
             <span class="homepage"><a target="_blank" href="https://www.chromium.org/">homepage</a></span>
             <input type="checkbox" hidden id="2" />
@@ -252,7 +253,7 @@ SOFTWARE.</pre>
 // (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 // OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</pre>
             </div>
-        </div>
+        </div>-->
         <div class="product">
             <span class="title">CEF</span>
             <span class="homepage"><a target="_blank" href="https://bitbucket.org/chromiumembedded/cef/">homepage</a></span>
