--- a/SLBr/SLBr/Resources/License.html
+++ b/SLBr/SLBr/Resources/License.html
@@ -11,17 +11,17 @@ Use of this source code is governed by a GNU license that can be found in the LI
     </head>
     <body>
         <pre>
-// SLBr. The new, clean, lightweight .NET Web browser.
-// Copyright (C) 2022 SLT World
-//
-// This program is free software: you can redistribute it and/or modify
-// it under the terms of the GNU General Public License as published by
-// the Free Software Foundation, either version 3 of the License, or
-// (at your option) any later version.
-//
-// This program is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-// GNU General Public License for more details.</pre>
+SLBr. The new, clean, lightweight .NET Web browser.
+Copyright (C) 2022 SLT World
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.</pre>
     </body>
 </html>
