--- a/SLBr/SLBr/Resources/NewTab.html
+++ b/SLBr/SLBr/Resources/NewTab.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>New Tab</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!--<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
 </head>
 <body>
     <div class="Center NewTabSearchContainer">
