--- a/SLBr/SLBr/Resources/Urls.html
+++ b/SLBr/SLBr/Resources/Urls.html
@@ -1,8 +1,7 @@
 ﻿<!--Copyright © 2022 SLT World. All rights reserved.d
 Use of this source code is governed by a GNU license that can be found in the LICENSE file.-->
 
-<!DOCTYPE html>waa
-
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
@@ -22,11 +21,11 @@ Use of this source code is governed by a GNU license that can be found in the LI
         <li><a href="slbr://credits/">slbr://credits</a></li>
         <li><a href="slbr://whatsnew/">slbr://whatsnew</a></li><!--milestones-->
         <!--<li><a href="slbr://plans/">slbr://plans</a></li>
-    <li><a href="slbr://dino/">slbr://dino</a></li>-->
+        <li><a href="slbr://dino/">slbr://dino</a></li>-->
         <li><a href="slbr://cdmsupport/">slbr://cdmsupport</a></li>
-        <li><a href="slbr://devtoolstests/">slbr://devtoolstests</a></li>
-        <!--<li><a href="slbr://geolocationtest/">slbr://geolocationtest</a></li>-->
-        <li><a href="slbr://slbruadetector/">slbr://slbruadetector</a></li>
+        <!--<li><a href="slbr://devtoolstests/">slbr://devtoolstests</a></li>
+        <li><a href="slbr://geolocationtest/">slbr://geolocationtest</a></li>
+        <li><a href="slbr://slbruadetector/">slbr://slbruadetector</a></li>-->
     </ul>
 </body>
 </html>
