--- a/SLBr/SLBr/Resources/WhatsNew.html
+++ b/SLBr/SLBr/Resources/WhatsNew.html
@@ -14,16 +14,230 @@ Use of this source code is governed by a GNU license that can be found in the LI
         body {
             margin: 0px;
         }
+
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            /*margin-right: auto;
+            margin-left: auto;*/
+        }
+
+        td, th {
+            border: 1px solid #F5F5F5;
+            /*text-align: left;*/
+            padding: 8px;
+        }
+        
+        th {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: left;
+            background-color: #0092FF;
+            color: white;
+        }
+
+        tr:nth-child(even) {
+            background-color: #F5F5F5;
+        }
+
+        tr:hover {
+            background-color: #DDD;
+        }
     </style>
 </head>
 <body>
     <div class="AboutHeader">
         <h1>SLBr</h1>
-        <p>The new, clean, lightweight .NET Web browser</p>
+        <!--<p>The new, clean, lightweight .NET Web browser</p>-->
+        <p>SLBr 2022.4.4.0 Release Notes</p>
     </div>
 
     <div class="AboutContent">
-        <h2>What's New in SLBr 2022.3.20.0</h2>
+        <h2>2022.4.4.0</h2><!--<h2>What's New in SLBr VERSIONHERE</h2>-->
+        <p>
+            Note from the developer: I forgot to check the user agent in a rush to publish the previous release.
+        </p>
+        <h3>Contributing</h3>
+        <p>
+            Want to contribute? See what help is needed in SLBr's <a target="_blank" href="https://github.com/SLT-World/SLBr/projects/1">Github Project Page</a>
+        </p>
+        <br />
+        <table>
+            <tr>
+                <th>Function/Feature Implementation</th><!--Updates-->
+                <th>Action Type</th><!--Feature, Fix, Change-->
+                <th>Development State</th><!--Work In Progress, Completed, Removed, On Hold-->
+            </tr>
+            <tr>
+                <td>Native Built-In Tracker & Ad Blocker</td>
+                <td>Feature</td>
+                <td>Work In Progress</td>
+            </tr>
+            <tr>
+                <td>SLBr adds a drag & drop mechanism</td>
+                <td>Feature</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>Automatic tab closing feature</td>
+                <td>Feature</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>Set as Default Browser option</td>
+                <td>Feature</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>SLBr will register the required associations</td>
+                <td>Feature</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>Introduced a better single instance restriction</td>
+                <td>Fix</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>SLBr will load all protocols & schemes, the Chrome scheme will only be loaded in Developer and Chromium mode</td>
+                <td>Change</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>Tab Restoring enabled for default</td>
+                <td>Change</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>Seperate save for Private mode</td>
+                <td>Feature</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>Tab Unloading time increased</td>
+                <td>Change</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>Optimized loading & tab controls, SLBr closes witrout the need of being loaded</td>
+                <td>Feature</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>SLBr removes force dark on webpage feature</td>
+                <td>Removed</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>SLBr adds support of the favourite feature for Internet Explorer mode</td>
+                <td>Feature</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>SLBr will only replace the text in the address bar only if it is not focused</td>
+                <td>Change</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>SLBr will now show urls on tabs in Internet Explorer mode (On Startup)</td>
+                <td>Feature</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>SLBr opens favourite addresses in a new tab if the middle click is used</td>
+                <td>Feature</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>Scroll through favourites in the favourites panel with mouse wheel</td>
+                <td>Feature</td>
+                <td>Completed</td>
+            </tr>
+        </table>
+        <h3>UI Changes</h3>
+        <ul>
+            <!--<li>Removed the SLBr header on the New Page</li>-->
+            <li>SLBr in Internet Explorer mode will no longer show urls in the tabs on startup</li>
+            <li>Removed the add button from the tabs header. To create a new tab, find and press the + icon in the tools bar</li>
+            <li>A more sharper text than ever before</li>
+            <li>A bit of border position change in the tools bar</li>
+        </ul>
+        <h3>Bug fixes</h3>
+        <ul>
+            <li>Reduced some crashes in the SLBr Internet Explorer mode</li>
+            <li>Fixed the homepage setting not saving</li>
+            <li>Switched to Software Rendering to eliminate the problem of SLBr not working on certain devices</li>
+            <li>SLBr can now open files through the file explorer (It is actually implemented, just that it used to cause SLBr to crash)</li>
+            <li>Fixed useragent not applying the SLBr useragent</li>
+            <li>Fixed new release prompt showing the current version and not the new available version</li>
+            <li>Values are now passed into weblight loading</li>
+            <li>Fixed a few no internet connection crashes</li>
+        </ul>
+        <h3>Code Changes</h3>
+        <ul>
+            <li>Changed the way of registering schemes, using classes for a more cleaner look, but sacrificed faster startup time</li>
+            <li>Improved the code</li>
+            <li>Removed unnecessary usings</li>
+            <li>Removed and changed the way on how the events of close & pin buttons are added. Slightly improved a bit of load time</li>
+            <li>Changed from initializing a instance of Uri for host to a fast and straightforward url host parsing</li>
+            <li>The maximum number of render processes is set from 1 to 5, to minimize the affects of render process crashes</li>
+            <li>Limited the size of disk cache to 100 MB</li>
+        </ul>
+    </div>
+    <!--<div class="List">
+        <h3>Function Changes</h3>
+        <ul>
+            <li>A work-in-progress native built-in ad & tracker blocker</li>
+            <li>Dropping is now allowed</li>
+            <li>SLBr now automatically closes a tab if the page orders to do so</li>
+            <li>SLBr is now a default browser, it means that SLBr can be selected as the default browser, SLBr takes another giant leap forward</li>
+            <li>Enforced the restriction of a single instance</li>
+            <li>SLBr will register the required associations for a default browser</li>
+            <li>SLBr can now load all protocols, even ones that were registered in the registry</li>
+            <li>The Chrome protocol will only be available in developer mode</li>
+            <li>Tab Restoring will be enabled for default</li>
+            <li>Seperated save for private mode</li>
+            <li>Increased tab unloading time</li>
+            <li>Favourite feature is now supported in Internet Explorer Mode</li>
+            <li>SLBr will only replace the text in the address bar if it is not focused</li>
+            <li>Removed webpage dark mode forcing again due to it causing unnecessary slow loading, SLBr might have a new way to dark mode in the future</li>
+            <li>You can now close tabs without the need of it being loaded</li>
+            <li>Middle click on a favourite item will now open the url in a new tab</li>
+        </ul>
+        <h3>UI Changes</h3>
+        <ul>
+            <li>SLBr in Internet Explorer mode will no longer show urls in the tabs on startup</li>
+            <li>Removed the add button from the tabs header. To create a new tab, find and press the + icon in the tools bar</li>
+            <li>A more sharper text than ever before</li>
+            <li>A bit of border position change in the tools bar</li>
+        </ul>
+        <h3>Bug fixes</h3>
+        <ul>
+            <li>Reduced some crashes in the SLBr Internet Explorer mode</li>
+            <li>Fixed the homepage setting not saving</li>
+            <li>Switched to Software Rendering to eliminate the problem of SLBr not working on certain devices</li>
+            <li>SLBr can now open files through the file explorer (It is actually implemented, just that it used to cause SLBr to crash)</li>
+            <li>Fixed useragent not applying the SLBr useragent</li>
+            <li>Fixed new release prompt showing the current version and not the new available version</li>
+            <li>Values are now passed into weblight loading</li>
+            <li>Fixed a few no internet connection crashes</li>
+        </ul>
+        <h3>Code Changes</h3>
+        <ul>
+            <li>Changed the way of registering schemes, using classes for a more cleaner look, but sacrificed faster startup time</li>
+            <li>Improved the code</li>
+            <li>Removed unnecessary usings</li>
+            <li>Removed and changed the way on how the events of close & pin buttons are added. Slightly improved a bit of load time</li>
+            <li>Changed from initializing a instance of Uri for host to a fast and straightforward url host parsing</li>
+            <li>The maximum number of render processes is set from 1 to 5, to minimize the affects of render process crashes</li>
+            <li>Limited the size of disk cache to 100 MB</li>
+        </ul>
+        <h3>Contributing</h3>
+        <p>
+            To contribute features to SLBr, see what help are needed in SLBr's <a target="_blank" href="https://github.com/SLT-World/SLBr/projects/1">Github Project Page</a>
+        </p>
+    </div>-->
+    <!--<h2>What's New in SLBr 2022.3.20.0</h2>
         <p>
             Every update of SLBr delivers many new features.
         </p>
@@ -40,7 +254,6 @@ Use of this source code is governed by a GNU license that can be found in the LI
                 <li>Opens About page on first try</li>
                 <li>Fixed various errors that caused crashes on first try</li>
                 <li>Rearranged Tools Menu</li>
-                <!--<li>Replacing the default 500 error page with a prompt, just the same as what SLBr responds a 404 error</li>-->
             </ul>
             <h3>Bug fixes</h3>
             <ul>
@@ -58,7 +271,7 @@ Use of this source code is governed by a GNU license that can be found in the LI
                 To contribute features to SLBr, see what features are needed at SLBr's <a target="_blank" href="https://github.com/SLT-World/SLBr/projects/1">Github Project Page</a>
             </p>
         </div>
-    </div>
+    </div>-->
     <!--<h2>What's New in SLBr 2022.3.13.0</h2>
         <p>
             Every update of SLBr delivers many new features.
